--- a/Final Gauntlet/Properties/Resources.resx
+++ b/Final Gauntlet/Properties/Resources.resx
@@ -142,11 +142,23 @@
   <data name="heal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\heal.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="lichking" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lichking.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="necromancer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\necromancer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="orc1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\orc1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="slime" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\slime (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SuperSkeletonLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SuperSkeletonLeft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SuperSkeletonRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SuperSkeletonRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="victory" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\victory.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
